--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,36 @@
 version: '3'
 services:
+  mysql:
+    image: mysql:5.7
+    volumes:
+      - ./data/db:/var/lib/mysql
+    container_name: mysql-5.7
+    hostname: mysql-server
+    environment:
+      MYSQL_ROOT_PASSWORD: mypassword
+      MYSQL_DATABASE: shipping_tracking
+      MYSQL_USER: user
+      MYSQL_PASSWORD: password
+    ports:
+      - 3306:3306
   web:
     build: .
-    hostname: "app"
+    links: 
+      - db
+    container_name: web
+    hostname: app
     ports:
       - "1337:1337"
-  rabbitmq:
-    image: "rabbitmq:3-management"
-    hostname: "rabbitmq-server"
-    environment:
-      RABBITMQ_ERLANG_COOKIE: "SWQOKODSQALRPCLNMEQG"
-      # RABBITMQ_DEFAULT_USER: "rabbitmq"
-      # RABBITMQ_DEFAULT_PASS: "rabbitmq"
-      # RABBITMQ_DEFAULT_VHOST: "/"
-    ports:
-      - "15672:15672"
-      - "5672:5672"
-    labels:
-      NAME: "rabbitmq"
-  mysql:
-    image: "mysql"
-    hostname: "mysql-server"
-    ports:
-      - 6603:3306
-    environment:
-      MYSQL_ROOT_PASSWORD: "mypassword"
-    volumes:
-      - /storage/docker/mysql-datadir:/var/lib/mysql
+  # rabbitmq:
+  #   image: "rabbitmq:3-management"
+  #   hostname: "rabbitmq-server"
+  #   environment:
+  #     RABBITMQ_ERLANG_COOKIE: "SWQOKODSQALRPCLNMEQG"
+  #     # RABBITMQ_DEFAULT_USER: "rabbitmq"
+  #     # RABBITMQ_DEFAULT_PASS: "rabbitmq"
+  #     # RABBITMQ_DEFAULT_VHOST: "/"
+  #   ports:
+  #     - "15672:15672"
+  #     - "5672:5672"
+  #   labels:
+  #     NAME: "rabbitmq"
